<resources>
    <string name="app_name">cevicheriaApp</string>
    <!-- TODO: Remove or change this placeholder text -->
    <string name="hello_blank_fragment">Hello blank fragment</string>

    <string name="open_nav">Open Navigation Drawer</string>
    <string name="close_nav">Close Navigation Drawer</string>
    <string name="mesa_1">Mesa 1</string>
    <string name="mesa_2">Mesa 2</string>
    <string name="mesa_3">Mesa 3</string>
    <string name="mesa_4">Mesa 4</string>
    <string name="mesa_5">Mesa 5</string>
    <string name="mesa_6">Mesa 6</string>

    <string name="regLblInicioSesion">Iniciar Sesión</string>
    <string name="logTxtUsuario">Correo</string>
    <string name="logTxtContrasena">Contraseña</string>
    <string name="logBtnIngresar">Ingresar</string>

    <string name="btn_info">Información de la Cuenta</string>
    <string name="btn_rest">Restablecer Contraseña</string>
    <string name="cuentaLblTitulo">MI CUENTA</string>
    <string name="volver">Volver</string>
    <string name="volver2">Volver</string>
    <string name="txtPassAct">Contraseña Actual</string>
    <string name="txtNewPass">Contraseña Nueva</string>
    <string name="txtConfNewPass">Confirmar nueva contraseña</string>
    <string name="btnReset">Reestablecer contraseña</string>
    <string name="default_web_client_id">102731602102469474803</string>
    <string name="deliveryLblTitulo">Delivery</string>
    <string name="btnCancelPass">Cancelar</string>

    <string name="terminoycondiciones">Aceptación de Términos registrarte como personal del restaurante la Chinitita , aceptas cumplir con estos términos y condiciones

Información  información precisa y actualizada es obligatorio. Cualquier información falsa o engañosa puede resultar en la terminación de tu registro.

Uso de la Cuenta La cuenta creada es exclusivamente para uso del personal autorizado. No se permite compartir tu acceso con terceros.

Responsabilidades del  personal es responsable de cumplir con las políticas y procedimientos del restaurante, así como de mantener la confidencialidad de la información interna.

Modificación de  Cevicheria la Chinita se reserva el derecho de modificar estos términos en cualquier momento. Se notificará a los usuarios sobre cualquier cambio significativo.

Derechos de Propiedad  contenido, marcas y materiales proporcionados en la plataforma son propiedad de la Cevicheria la Chinita y no pueden ser utilizados sin autorización.

Aceptación de Políticas de  registrarte, aceptas la Política de Privacidad de la Cevicheria la Chinita, que detalla cómo se maneja tu información personal.

Terminación de la  Cevicheria la Chinita se reserva el derecho de cancelar o suspender cualquier cuenta que no cumpla con estos términos.

cualquier consulta sobre estos términos, contacta a chinita21@gmail.com.</string>
</resources>