<FrameLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".fragmentos.ResetPasswordFragment">

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:orientation="vertical"
        android:padding="10dp"
        android:layout_marginTop="20dp">

        <View
            android:layout_width="match_parent"
            android:layout_height="2dp"
            android:background="@color/black"
            android:layout_marginBottom="1dp"/>

        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="Cambiar Contraseña"
            android:textSize="20sp"
            android:textStyle="bold"
            android:layout_gravity="center"
            android:layout_marginTop="5dp"
            android:layout_marginBottom="2dp"/>

        <View
            android:layout_width="match_parent"
            android:layout_height="2dp"
            android:background="@color/black"
            android:layout_marginTop="10dp"/>

        <TextView
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:text="CONTRASEÑA ACTUAL:"
            android:textSize="16sp"
            android:layout_marginTop="45dp" />

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:orientation="horizontal">

            <EditText
                android:id="@+id/txtPassAct"
                android:layout_width="0dp"
                android:layout_height="wrap_content"
                android:hint="@string/txtPassAct"
                android:inputType="textPassword"
                android:layout_weight="1"
                android:layout_marginTop="5dp" />

            <ImageView
                android:id="@+id/imgShowPassAct"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:src="@drawable/ic_visibility_off"
                android:contentDescription="Mostrar/Ocultar contraseña"
                android:padding="16dp"/>
        </LinearLayout>

        <TextView
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:text="NUEVA CONTRASEÑA:"
            android:textSize="16sp"
            android:layout_marginTop="25dp" />

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:orientation="horizontal">

            <EditText
                android:id="@+id/txtNewPass"
                android:layout_width="0dp"
                android:layout_height="wrap_content"
                android:hint="@string/txtNewPass"
                android:inputType="textPassword"
                android:layout_weight="1"
                android:layout_marginTop="5dp" />

            <ImageView
                android:id="@+id/imgShowNewPass"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:src="@drawable/ic_visibility_off"
                android:contentDescription="Mostrar/Ocultar contraseña"
                android:padding="16dp"/>
        </LinearLayout>

        <TextView
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:text="CONFIRMAR NUEVA CONTRASEÑA:"
            android:textSize="16sp"
            android:layout_marginTop="25dp" />

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:orientation="horizontal">

            <EditText
                android:id="@+id/txtConfNewPass"
                android:layout_width="0dp"
                android:layout_height="wrap_content"
                android:hint="@string/txtConfNewPass"
                android:inputType="textPassword"
                android:layout_weight="1"
                android:layout_marginTop="5dp" />

            <ImageView
                android:id="@+id/imgShowConfNewPass"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:src="@drawable/ic_visibility_off"
                android:contentDescription="Mostrar/Ocultar contraseña"
                android:padding="16dp"/>
        </LinearLayout>

        <Button
            android:id="@+id/btnRestablecer"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginTop="50dp"
            android:layout_marginHorizontal="40dp"
            android:text="@string/btnReset"
            android:background="@drawable/boton_pass"
            android:textColor="@android:color/white" />

        <Button
            android:id="@+id/btnCancelPass"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginTop="10dp"
            android:layout_marginHorizontal="40dp"
            android:text="@string/btnCancelPass"
            android:background="@drawable/boton_pass"
            android:textColor="@android:color/white" />

    </LinearLayout>
</FrameLayout>
